tests/invalid/runtime/div_zero_int.pts
function main() : void {
    int a = 1;
    int b = 0;
    int c = a / b;
    Sys.print(c.toString());
}
